新增了图片详情页的滚动功能

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
     <style>
     body{
-        background-color: #fff;
+        background-color: #fff  !important;
     }
     </style>
 <body>
